Fixed partially visible minicart dropdown when it's not initialized. It will be wrapped into `ui-dialog` div later, so this style is working only for not initialized minicart. https://github.com/breezefront/module-breeze/issues/78

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -122,6 +122,9 @@
                 }
             }
         }
+        > .block-minicart {
+            display: none;
+        }
     }
 }
 
